--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "libcouch",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Couchdb unified library and tiny model base",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:unit",
+    "test:unit": "mocha test/unit/*/**/*.ts",
     "build": "rm -rf lib && tsc -p tsconfig.build.json"
   },
   "keywords": [
@@ -19,10 +20,22 @@
     "glob": "^7.1.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/glob": "^5.0.35",
+    "@types/mocha": "^5.2.5",
     "@types/nano": "^6.4.6",
     "@types/node": "^10.5.8",
     "@types/pouchdb": "^6.3.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.17",
+    "nano": "^7.0.0",
+    "pouchdb-adapter-memory": "^7.0.0",
+    "pouchdb-core": "^7.0.0",
+    "pouchdb-mapreduce": "^7.0.0",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   }
 }
