--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libcouch",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Couchdb unified library and tiny model base",
   "main": "lib/index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "@types/pouchdb": "^6.3.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "chai-like": "^1.1.1",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.17",
     "nano": "^7.0.0",
